# SUCHAI-Flight-Software

./: .directory  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  FreeRTOSConfig.h  LICENSE  Makefile  README.md  SUCHAI_config.h  compile.py  config.h  install.sh  main.c  run_tests.sh
Drivers/: console.c  i2c_comm.c  (+1 more)
apps/nanopb-simple-app/: CMakeLists.txt
apps/nanopb-simple-app/include/app/system/: cmdNANO.h  repoDataSchema.h  task.h
apps/nanopb-simple-app/proto/: simple.proto
apps/nanopb-simple-app/src/system/: cmdNANO.c  main.c  task.c
apps/nanopb-simple-app/utils/include/: newRepoData.h
apps/nanopb-simple-app/utils/src/: newRepoData.c
src/: CMakeLists.txt
src/drivers/: CMakeLists.txt
src/drivers/Linux/: data_storage.c  init.c  install.sh
src/drivers/Linux/include/: data_storage.h  drivers.h  init.h
src/drivers/Linux/libcsp/: install_csp.sh
src/drivers/atmel/: .gitignore  FreeRTOSConfig.h  README.md  build.sh  clean.sh  install.sh
src/drivers/atmel/libcsp/: .gitignore  csp_config.h  install_csp_avr.sh
src/drivers/atmel/suchai/lowlevel/: port.c  startup_uc3.S
src/drivers/atmel/suchai/util/: drivers.h  hexdump.c  init.c  init.h  memcheck.c  util.h
src/drivers/atmel/suchai/xplained/: conf_board.h  conf_clock.h  conf_spi_master.h  conf_usart_serial.h  mt48lc4m16a2tg7e.h
src/drivers/esp32/: Makefile  README.md  component-freertos.mk  component-main.mk  init.c  install.sh  sdkconfig
src/drivers/esp32/include/: init.h
src/drivers/esp32/sch_components/sch_init/: init.c
src/drivers/groundstation/: CMakeLists.txt  config.h  data_storage.c  init.c  install.sh
src/drivers/groundstation/include/: conf_util.h  data_storage.h  drivers.h  init.h
src/drivers/groundstation/libcsp/: install_csp.sh
src/drivers/include/suchai/: cpu.h  i2c.h  init.h
src/drivers/nanomind/: build.sh  cpu.c  data_storage.c  i2c.c  i2c.h.suchai  init.c  install-toolchain.sh  install.sh  libcsp_wscript  rwdrv10987.c  syscalls_basic.c  syscalls_basic.c.suchai  wscript
src/drivers/nanomind/include/: data_storage.h  drivers.h  init.h  rwdrv10987.h
src/drivers/rpi/: CMakeLists.txt  cpu.c  data_storage.c  i2c.c  init.c  install.sh
src/drivers/rpi/include/: data_storage.h  drivers.h  i2c.h  init.h
src/drivers/simulator/: CMakeLists.txt  data_storage.c
src/drivers/simulator/include/: data_storage.h  init.h
src/drivers/x86/: CMakeLists.txt  cpu.c  data_storage.c  i2c.c  init.c  install.sh
src/drivers/x86/include/: data_storage.h  drivers.h  init.h
src/drivers/x86/libcsp/: .gitignore  install_csp.sh
src/drivers/x86/sgp4/: README.md  SGP4.h  TLE.c
src/lib/: CMakeLists.txt  igrf13.c  igrf13FS.c  log_utils.c  math_utils.c
src/lib/igrf/: IGRF13.COF  igrf13.c
src/lib/igrf/include/igrf/: igrf13.h
src/lib/include/: igrf13FS.h  log_utils.h  math_utils.h
src/lib/include/storage/: storage.h
src/lib/storage/: storage_flash.c  storage_psql.c  storage_ram.c  storage_sqlite.c
src/lib/storage/include/suchai/: storage.h
src/lib/utils/: log_utils.c  math_utils.c
src/lib/utils/include/suchai/: log_utils.h  math_utils.h
src/os/: CMakeLists.txt
src/os/FreeRTOS/: osDelay.c  osQueue.c  osScheduler.c  osSemphr.c  osThread.c
src/os/Linux/: osDelay.c  osQueue.c  osScheduler.c  osSemphr.c  osThread.c  pthread_queue.c
src/os/freertos/: osDelay.c  osQueue.c  osScheduler.c  osSemphr.c  osThread.c
src/os/include/: os.h  osDelay.h  osQueue.h  osScheduler.h  osSemphr.h  osThread.h  pthread_queue.h
src/os/include/os/: os.h
src/os/include/suchai/: osDelay.h  osQueue.h  osScheduler.h  osSemphr.h  osThread.h
src/os/linux/: osDelay.c  osQueue.c  osSemphr.c  osThread.c
src/os/sim/: osDelay.c  osQueue.c  osScheduler.c  osSemphr.c  osThread.c  pthread_queue.c
src/system/: CMakeLists.txt  cmdADCS.c  cmdCOM.c  cmdConsole.c  cmdDRP.c  cmdEPS.c  cmdFP.c  cmdFlightPlan.c  cmdGSSB.c  cmdOBC.c  cmdRW.c  cmdSensors.c  cmdSubSys.c  cmdTM.c  cmdTest.c  cmdTestCommand.c  globals.c  init.c  main.c  mainFS.c  repoCommand.c  repoData.c  repoDataSchema.c  taskADCS.c  taskCommunications.c  taskConsole.c  taskDispatcher.c  taskExecuter.c  taskExecuterB.c  taskFlightPlan.c  taskHousekeeping.c  taskInit.c  taskSensors.c  taskTest.c  taskWatchdog.c  utils.c
src/system/include/: cmdADCS.h  cmdCOM.h  cmdConsole.h  cmdDRP.h  cmdEPS.h  cmdFP.h  cmdFlightPlan.h  cmdGSSB.h  cmdOBC.h  cmdRW.h  cmdSensors.h  cmdSubSys.h  cmdTM.h  cmdTest.h  cmdTestCommand.h  config.h  config_template.h  configure.py  globals.h  init.h  main.h  mainFS.h  repoCommand.h  repoData.h  repoDataSchema.h  taskADCS.h  taskCommunications.h  taskConsole.h  taskDispatcher.h  taskExecuter.h  taskExecuterB.h  taskFlightPlan.h  taskHousekeeping.h  taskInit.h  taskSensors.h  taskTest.h  taskWatchdog.h  utils.h
src/system/include/suchai/: cmdCOM.h  cmdConsole.h  cmdDRP.h  cmdFP.h  cmdOBC.h  cmdTM.h  mainFS.h  repoCommand.h  repoData.h  taskCommunications.h  taskConsole.h  taskDispatcher.h  taskExecuter.h  taskFlightPlan.h  taskInit.h  taskWatchdog.h
test/test_bug_delay/: CMakeLists.txt  report.md
test/test_bug_delay/src/system/: main.c  taskTest.c
test/test_bug_delay/src/system/include/: taskTest.h
test/test_cmd/: .gitignore  CMakeLists.txt  logs_comparator.py  test_cmd_log_base.txt
test/test_cmd/src/system/: cmdTestCommand.c  main.c  taskTest.c
test/test_fp/: CMakeLists.txt
test/test_fp/src/system/: main.c
test/test_fuzz/: CMakeLists.txt  fs_seqs_executer.py  fuzzcspzmqnode.py  proc_info.py
test/test_fuzz/seqs/: solved_issues_07-05-2021.json  solved_issues_08-07-2020.json
test/test_fuzz/src/system/: repoCommand.c
test/test_int_file/: CMakeLists.txt  README.md  text.txt
test/test_int_file/include/suchai/: variables.h
test/test_int_file/src/system/: cmdFile.c  main.c  taskTest.c
test/test_load/: CMakeLists.txt
test/test_load/src/system/: main.c  taskTest.c
test/test_sgp4/: CMakeLists.txt  README.md  data.csv  generate_data.py
test/test_sgp4/src/system/: cmdTLE.c  main.c  taskTest.c
test/test_unit/: CMakeLists.txt  README.md
test/test_unit/src/system/: main.c
(+260 files in other folders)
